Fix: Fix Map not showing Issue

--- a/src/static/assets/css/contents.css
+++ b/src/static/assets/css/contents.css
@@ -17,6 +17,11 @@
 	color: #c7c7c7;
 }
 
+/*map logo hide*/
+.ol-viewport .ol-attribution {
+	display: none;
+}
+
 .layerpopup {
 	z-index: 9999999
 }
